11-26 20h api/trang-chu và api-trang-chu thêm slug cho hot_gift bằng tieude -> slug
